[tool.poetry]
name = "cablecar"
version = "0.1.0"
description = ""
authors = [" Kristian Zarębski <krizar312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asyncua = "^0.9.94"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cablecar = "cablecar.simulation:simulate"
